Correcciones de header,se agrego imagen,correcciones de estilo, se agregaron logica para colocar la imagen en las esquinas

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-       <h1>Kevin Enrique Rafael Bonilla</h1>
-    </header>
-</head>
+   <header>
+    <h1>Kevin Enrique Rafael Bonilla</h1>
+    <div class="user-icon">
+        <img src="icono1.png" alt="icono1" width="100" height="100">
+    </div>
+</header>
 <main>
     <aside class="aside">
         <h3>Menu 1</h3>
@@ -56,6 +58,10 @@
                 <label for="txtNombreCompleto">Nombre completo</label>
                 <input id="txtNombreCompleto" class="inputtext" type="text" disabled>
             </div>
+            <div class="user-icon">
+        <img src="icono2.png" alt="icono2" width="100" height="100" style="float:right">
+
+    </div>
         </form>
     </section>
 </main>
