Se logica para el formulario de persona

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <label for="txtapellido">Apellido</label>
                 <input id="txtapellido" class="inputtext" type="text">
             </div>
-            <button type="button" class="button button2">Registrar</button>
+            <button type="button" class="button button2" id="btnregistar">Registrar</button>
             <div class="form-group">
                 <label for="txtNombreCompleto">Nombre completo</label>
                 <input id="txtNombreCompleto" class="inputtext" type="text" disabled>
@@ -68,4 +68,7 @@
     <footer>
         <p>&copy; 2026 - Todos los derechos reservados a Kevin Bonilla</p>
     </footer>
+<script src="script.js"></script>
+
+</body>
 </html>
