Se agrega logica para formulario de hora y fecha,y multiplicar

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 <label for="txtnumero2">Número 2</label>
                 <input id="txtnumero2" class="inputtext" type="number">
             </div>
-            <button type="button" class="button button1">Multiplicar</button>
+            <button id="btnMultiplicar" type="button" class="button button1">Multiplicar</button>
             <div class="form-group">
-                <label for="txtResultado">Resultado</label>
-                <input id="txtResultado" class="inputtext" type="number" disabled>
+                <label for="txtresultado">Resultado</label>
+                <input id="txtresultado" class="inputtext" type="number" disabled>
             </div>
             <div class="form-group">
                 <label for="txtfechaactual">Fecha Actual</label>
@@ -53,14 +53,13 @@
                 <label for="txtapellido">Apellido</label>
                 <input id="txtapellido" class="inputtext" type="text">
             </div>
-            <button type="button" class="button button2">Registrar</button>
+            <button type="button" class="button button2" id="btnregistrar">Registrar</button>
             <div class="form-group">
                 <label for="txtNombreCompleto">Nombre completo</label>
                 <input id="txtNombreCompleto" class="inputtext" type="text" disabled>
             </div>
             <div class="user-icon">
         <img src="icono2.png" alt="icono2" width="100" height="100" style="float:right">
-
     </div>
         </form>
     </section>
@@ -68,4 +67,7 @@
     <footer>
         <p>&copy; 2026 - Todos los derechos reservados a Kevin Bonilla</p>
     </footer>
+<script src="script.js"></script>
+
+</body>
 </html>
